fixed tooltip locations for content types, ownprofileview editables and left alignment of just text tooltip arrows

--- a/client/Framework/themes/default/kd.tooltip.styl
+++ b/client/Framework/themes/default/kd.tooltip.styl
@@ -143,7 +143,7 @@ div.kdtooltip
     &.placement-left
       div.arrow
         bg                    position, -147px -562px
-        right                 -26px
+        right                 -14px
       &.direction-center
         div.arrow
           top                 50%
